# ana_bot

./: .gitattributes  .gitignore  README.md  commands.txt  error  frames.gv  frames_2024-05-15_15.00.57.gv  top-output.txt
Arduino Sketches/: Serial_Data.ino
ROS2_Examples/Transform/: ROS_Transforms.txt
install/: local_setup.sh  setup.sh
install/ana/lib/ana/: PID  depth_live_filter_node  libcuda_operations.a~72f5edd (SLAM, Costmap generation)  occupancy_grid_subscriber_node  pid_node  point_cloud_filter_node  point_cloud_filter_node~72f5edd (SLAM, Costmap generation)  publish_pcd_node  publish_pcd_node~72f5edd (SLAM, Costmap generation)
install/ana/share/ana/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ana/share/ana/cmake/: anaConfig-version.cmake  anaConfig.cmake
install/ana/share/ana/config/: amcl_params.yaml  ana.rviz  ana_map.rviz  ana_nav2.rviz  custom_navigator.xml  diff_TF.rviz  diff_drive_bot.rviz  gazebo_params.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  rtabmap.yaml  simple_navigation_bt.xml  simulation_depth.rviz  twist_mux.yaml
install/ana/share/ana/description/: camera.xacro  camera_xacro.xacro  depth_camera.xacro  gazebo_control_front_wheels.xacro  gazebo_diff_control.xacro  gazebo_four_diff_control.xacro  gazebo_skid_control.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro  robot_core.xacro~72f5edd (SLAM, Costmap generation)  ros2_diff_control.xacro
install/ana/share/ana/environment/: ament_prefix_path.dsv  path.dsv
install/ana/share/ana/launch/: control.launch.py  launch_diff_sim.launch.py  launch_sim.launch.py  localization_launch.py  nav2.launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  rtab.launch.py
install/ana/share/ana/meshes/: ana_chassis.stl  d435i.stl
install/ana/share/ana/rtab_maps/: occupancy_grid.pgm  occupancy_grid.yaml  playground_organized.pcd  playground_organized.ply  rtab_settings.config  settings4.pcd  settings4.ply  settings4_toLoad  settings4_toLoad.ini
install/ana/share/ana/worlds/: bedroom.world  empty.world  obstacles.world  obstacles_walls.world  outside.world
install/gazebo_ros2_control/include/gazebo_ros2_control/: gazebo_ros2_control_plugin.hpp  gazebo_system.hpp  gazebo_system_interface.hpp
install/gazebo_ros2_control/share/gazebo_ros2_control/: gazebo_hardware_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gazebo_ros2_control/share/gazebo_ros2_control/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  gazebo_ros2_controlConfig-version.cmake  gazebo_ros2_controlConfig.cmake
install/gazebo_ros2_control_demos/lib/gazebo_ros2_control_demos/: example_diff_drive  example_effort  example_gripper  example_position  example_position_pid  example_tricycle_drive  example_velocity
install/gazebo_ros2_control_demos/share/gazebo_ros2_control_demos/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_python_pkg/lib/my_python_pkg/: arduino_serial  motor_control  my_node
install/my_python_pkg/share/my_python_pkg/: package.sh  package.xml
install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h  t265_realsense_node.h
install/realsense2_camera/lib/realsense2_camera/: imu_processor  realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_description/share/realsense2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
sketch_jan03a/: sketch_jan03a.ino
src/ana/: CMakeLists.txt  package.xml
src/ana/commands/: life_savers.txt
src/ana/config/: amcl_params.yaml  ana.rviz  ana_controller.yaml  ana_map.rviz  ana_nav2.rviz  custom_navigator.xml  gazebo_params.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  rtabmap.yaml  rviz2_livox.rviz  simple_navigation_bt.xml  twist_mux.yaml  velodyne_config.yaml  velodyne_rviz.rviz
src/ana/description/: camera.xacro  camera_xacro.xacro  depth_camera.xacro  gazebo_diff_control.xacro  gazebo_four_diff_control.xacro  livox_mid_360.xacro  robot.urdf.xacro  robot_core.xacro  ros2_diff_control.xacro  velodyne_vlp16.xacro
src/ana/github_content/: Screencast from 05-14-2024 01:31:51 AM.webm
src/ana/launch/: d435i_launch.py  launch_sim.launch.py  livox_slam.launch.py  localization_launch.py  nav2.launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  rtab.launch.py  rtab_3D.launch.py  rtabmap_velodyne.launch.py  velodyne_launch.py
src/ana/meshes/: ana_chassis.stl
src/ana/other/: frames_2024-05-16_15.10.32.gv  screenshot-1715657734.cam
src/ana/rtab_maps/: occupancy_grid.yaml
src/ana/src/: PID.cpp  PointCloudFilter.cpp  ply2pcd.cpp
src/ana/src/cuda/: cuda_operations.h  pointcloud_processing.cu
src/ana/src/nodes/: PointCloudFilter.cpp  depth_live_filter.cpp  occupancy_grid_subscriber.cpp  ply2pcd.cpp  point_net_filter.cpp
src/ana/worlds/: bedroom.world  outside.world  outside2.world  outside3.world  outside4.world
src/my_python_pkg/: package.xml  setup.py
src/my_python_pkg/my_python_pkg/: arduino_serial.py  motor_control.py  my_node.py
src/pointnet_ros/: package.xml  setup.cfg  setup.py
src/pointpillars_ros/: package.xml  setup.cfg  setup.py
src/pointpillars_ros/pointpillars_ros/: pointpillars_service.py
src/pointpillars_ros/srv/: ProcessPointCloud.srv
(+169 files in other folders)
