<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_python_pkg</name>
  <version>0.0.0</version>
  <description>ANA: Autonomous Navigation Assembly</description>
  <maintainer email="arr160@pitt.edu">aidanr</maintainer>
  <license>TODO: License declaration</license>

  <!-- dependencies -->
  <depend>rclpy</depend>
  <exec_depend>pyserial</exec_depend>

  <!-- test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
